refactored test cases

--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,21 @@
     <artifactId>n11BootcampCases</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <profiles>
+        <profile>
+            <id>addIphone</id>
+            <properties>
+                <cucumber.filter.tags>@addIphone</cucumber.filter.tags>
+            </properties>
+        </profile>
+    </profiles>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <selenium.version>4.0.0</selenium.version>
-        <cucumber.version>7.8.1</cucumber.version>
+        <cucumber.version>7.2.3</cucumber.version>
         <aspectj.version>1.9.4</aspectj.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
